28/08/2018: Added Clown DLC Survivor/Killer and perks to lists
07/10/2018: Added Spirit DLC Survivor/Killer and perks to lists